--- a/compliance/regulatory/TOC.yml
+++ b/compliance/regulatory/TOC.yml
@@ -1,5 +1,7 @@
 - name: Microsoft 合規性方案
   items:
+    - name: Microsoft 合規性方案
+      href: offering-home.yml
     - name: 全域
       items:
         - name: CIS 基準
@@ -8,9 +10,9 @@
           href: offering-csa-star-attestation.md
         - name: CSA-STAR 認證
           href: offering-csa-star-certification.md
-        - name: CSA STAR 自我評估
+        - name: CSA-STAR 自我評定
           href: offering-csa-star-self-assessment.md
-        - name: ISO - 建議使用的行動計劃
+        - name: ISO - 建議的行動計劃
           href: iso-action-plan.md
         - name: ISO 20000-1-2011
           href: offering-iso-20000-1-2011.md
@@ -52,7 +54,7 @@
           href: offering-irs-1075.md
         - name: ITAR
           href: offering-itar.md
-        - name: NIST - 建議使用的行動計劃
+        - name: NIST - 建議的行動計劃
           href: nist-action-plan.md
         - name: NIST 800-171
           href: offering-nist-sp-800-171.md
@@ -80,7 +82,7 @@
               href: offering-apra-australia.md
             - name: AMF 和 ACPR (法國)
               href: offering-amf-acpr-france.md
-            - name: 'CFTC 1.31 (US) '
+            - name: CFTC 1.31 (美國)
               href: offering-cftc-1-31-us.md
             - name: EBA (歐盟)
               href: offering-eba-eu.md
@@ -226,7 +228,9 @@
       items:
         - name: 亞洲
           items:
-            - name: CS Mark (Gold) (日本))
+            - name: ABS OSPAR (新加坡)
+              href: offering-abs-ospar.md
+            - name: CS Mark (Gold) (日本)
               href: offering-cs-mark-gold-japan.md
             - name: DJCP (中國)
               href: 'https://www.trustcenter.cn/compliance/default.html#DJCP'
@@ -266,7 +270,7 @@
               href: offering-enisa.md
             - name: 歐盟示範條款
               href: offering-eu-model-clauses.md
-            - name: 歐盟–美國隱私保護盾
+            - name: 歐盟美國隱私盾
               href: offering-eu-us-privacy-shield.md
             - name: G-Cloud (英國)
               href: offering-g-cloud-uk.md
@@ -292,9 +296,9 @@
               href: offering-pdpa-argentina.md
 - name: 一般資料保護規定 (GDPR)
   items:
-    - name: GDPR 概述
+    - name: GDPR 概觀
       href: gdpr.md
-    - name: 建議的 GDPR 計劃
+    - name: GDPR 建議的行動計劃
       href: gdpr-action-plan.md
     - name: GDPR 的資訊保護
       href: gdpr-information-protection.md
@@ -304,7 +308,7 @@
       items:
         - name: 責任整備檢查清單
           href: gdpr-arc.md
-        - name: Azure 及 Dynamics 365
+        - name: Azure 和 Dynamics 365
           href: gdpr-arc-azure-dynamics.md
         - name: Microsoft 支援服務與專業服務
           href: gdpr-arc-prof-services.md
@@ -318,7 +322,7 @@
           href: gdpr-manage-gdpr-data-subject-requests-with-the-dsr-case-tool.md
         - name: Azure
           href: gdpr-dsr-azure.md
-        - name: Azure DevOps 服務
+        - name: Azure DevOps Services
           href: gdpr-dsr-vsts.md
         - name: Dynamics 365
           href: gdpr-dsr-dynamics365.md
@@ -332,7 +336,7 @@
           href: gdpr-dsr-visual-studio-family.md
         - name: Windows 企業版
           href: gdpr-dsr-windows.md
-    - name: 外洩通知
+    - name: 缺口通知
       items:
         - name: 外洩通知
           href: gdpr-breach-notification.md
@@ -344,9 +348,9 @@
           href: gdpr-breach-office365.md
         - name: Windows 企業版
           href: gdpr-breach-windows.md
-    - name: 資料保護影響陳述
+    - name: 資料保護影響聲明
       items:
-        - name: 資料保護影響評估
+        - name: 資料保護影響評定
           href: gdpr-data-protection-impact-assessments.md
         - name: Azure
           href: gdpr-dpia-azure.md
@@ -366,17 +370,17 @@
           href: gdpr-for-sharepoint-server.md
         - name: 適用於 Exchange Server 的 GDPR
           href: gdpr-for-exchange-server.md
-        - name: 適用于商務用 Skype Server & Lync Server 的 GDPR
+        - name: 適用於商務用 Skype Server 和 Lync Server 的 GDPR
           href: gdpr-for-skype-for-business-server.md
         - name: 適用於 Project Server 的 GDPR
           href: gdpr-for-project-server.md
-        - name: GDPR for Office Web Apps Server & Office Online Server
+        - name: 適用於 Office Web Apps Server 和 Office Online Server 的 GDPR
           href: gdpr-for-office-online-server.md
         - name: 適用於內部部署 Windows Server 檔案共用的 GDPR
           href: gdpr-for-on-premises-file-shares.md
     - name: 匯出資料的其他步驟
       href: gdpr-system-generated-log-data.md
-    - name: 適用于 Office 365 開發/測試環境的 GDPR
+    - name: 適用於 Office 365 開發/測試環境的 GDPR
       href: gdpr-discovery-protection-reporting-in-Office365-dev-test-environment.md
 - name: 加州消費者隱私法 (CCPA)
   items:
