--- a/compliance/index.yml
+++ b/compliance/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:Hub
-title: 合規性文件
-summary: 您需要的 Microsoft 文件和資源，以為您的公司或組織開始使用合規性。
+title: 規範檔
+summary: Microsoft 檔和資源，您必須先開始使用您的企業或組織的合規性。
 brand: m365
 metadata:
-  title: 合規性文件
-  description: 您需要的 Microsoft 文件和資源，以為您的公司或組織開始使用合規性。
+  title: 規範檔
+  description: Microsoft 檔和資源，您必須先開始使用您的企業或組織的合規性。
   services: service
   ms.service: service
   ms.subservice: subservice
@@ -15,12 +15,12 @@ metadata:
   author: robmazz
   ms.author: robmazz
   ms.date: 11/30/2020
-  ms.openlocfilehash: 9f175f0f0e3b42518999d2cc6c334cbd9b15b65b
-  ms.sourcegitcommit: 626b0076d133e588cd28598c149a7f272fc18bae
-  ms.translationtype: HT
+  ms.openlocfilehash: 12de0e81e8a9d1ee908207dc4e3d2dc50a797f7e
+  ms.sourcegitcommit: 7651cdc4af88278aef02114b4331d8d379f10def
+  ms.translationtype: MT
   ms.contentlocale: zh-TW
-  ms.lasthandoff: 11/30/2020
-  ms.locfileid: "49506363"
+  ms.lasthandoff: 12/03/2020
+  ms.locfileid: "49568639"
 highlightedContent:
   items:
   - title: 開始使用 Microsoft 365 合規性的快速工作
@@ -29,189 +29,189 @@ highlightedContent:
   - title: 為資料隱私權規定部署資訊保護
     itemType: get-started
     url: https://docs.microsoft.com/microsoft-365/solutions/information-protection-deploy
-  - title: 了解雲端的共同責任
+  - title: 深入瞭解雲端中的共用責任
     itemType: overview
     url: https://docs.microsoft.com/azure/security/fundamentals/shared-responsibility
-  - title: 了解 Microsoft 如何保護客戶資料
+  - title: 深入瞭解 Microsoft 如何保護客戶資料
     itemType: learn
     url: https://docs.microsoft.com/learn/paths/audit-safeguard-customer-data/
-  - title: 了解 Microsoft 合規性管理員
+  - title: 深入瞭解 Microsoft 合規性管理員
     itemType: learn
     url: https://docs.microsoft.com/learn/paths/compmgmt/
-  - title: 在 Microsoft 365 中管理內部風險
+  - title: 在 Microsoft 365 中管理有問必答風險
     itemType: learn
     url: https://docs.microsoft.com/learn/paths/m365-compliance-insider/
-  - title: 管理資訊保護和控管
+  - title: 管理資訊保護和管理
     itemType: learn
     url: https://docs.microsoft.com/learn/paths/m365-compliance-information/
-  - title: 了解進階電子文件探索和進階稽核
+  - title: 深入瞭解「高級 eDiscovery」和「高級核查」
     itemType: learn
     url: https://docs.microsoft.com/learn/paths/compliance-discover/
 productDirectory:
-  title: 法規遵循
-  summary: 遵循國際和國內標準與法規的 Microsoft 指導方針。
+  title: 法規遵從性
+  summary: 符合國際和國內標準及規章的 Microsoft 指導方針。
   items:
   - title: 一般資料保護規定 (GDPR)
     imageSrc: https://docs.microsoft.com/office/media/icons/compliance-blue.svg
-    summary: 在您使用 Microsoft 產品和服務時，能幫助您遵循 GDPR 規定的權利和履行其義務的指南。
+    summary: 指導方針，協助您在使用 Microsoft 產品和服務時，遵循 GDPR 的權利並履行義務。
     url: /compliance/regulatory/gdpr
   - title: Microsoft 合規性方案
     imageSrc: https://docs.microsoft.com/office/media/icons/globe-internet.svg
-    summary: Microsoft 提供了一套全面的合規性方案，以幫助您的組織遵守有關資料收集和使用的國家、地區和產業特定要求。
+    summary: Microsoft 提供一組完整的規範選項，可協助您的組織遵守管理資料集合及使用的本國、區域及特定行業的需求。
     url: /compliance/regulatory/offering-home
-  - title: 法規遵循和 Microsoft Azure
+  - title: 法規遵從性和 Microsoft Azure
     imageSrc: https://docs.microsoft.com/media/logos/logo_azure.svg
-    summary: 了解法規遵循和 Microsoft Azure 雲端服務。
+    summary: 深入瞭解法規遵從性和 Microsoft Azure。
     url: https://docs.microsoft.com/azure/compliance/
 conceptualContent:
   title: 服務保證
-  summary: 了解 Microsoft 如何保護客戶資料，以開始進行安全性與風險評估。
+  summary: 請先瞭解 Microsoft 如何保護客戶資料，以進行安全性和風險評估。
   items:
-  - title: 結構
+  - title: 架構
     links:
     - url: https://docs.microsoft.com/learn/modules/audit-architecture/
       itemType: learn
-      text: 了解結構
+      text: 深入瞭解架構
     - url: /compliance/assurance/assurance-architecture
       itemType: concept
-      text: 結構概觀
+      text: 架構概述
   - title: 稽核記錄
     links:
     - url: https://docs.microsoft.com/learn/modules/audit-logging-monitoring/
       itemType: learn
-      text: 了解稽核記錄
+      text: 深入瞭解審核記錄
     - url: /compliance/assurance/assurance-audit-logging
       itemType: concept
-      text: 稽核記錄概觀
+      text: 審核記錄概述
   - title: 資料中心安全性
     links:
     - url: https://docs.microsoft.com/learn/modules/audit-physical-security/
       itemType: learn
-      text: 了解資料中心安全性
+      text: 深入瞭解資料中心安全性
     - url: /compliance/assurance/assurance-datacenter-security
       itemType: concept
-      text: 資料中心安全性概觀
+      text: 資料中心安全性綜述
   - title: 加密和金鑰管理
     links:
     - url: https://docs.microsoft.com/learn/modules/audit-encryption/
       itemType: learn
-      text: 了解加密和金鑰管理
+      text: 深入瞭解加密和金鑰管理
     - url: /compliance/assurance/assurance-encryption
       itemType: concept
-      text: 加密和金鑰管理概觀
-  - title: 控管
+      text: 加密和金鑰管理概述
+  - title: 治理
     links:
     - url: https://docs.microsoft.com/learn/modules/audit-governance/
       itemType: learn
-      text: 了解身分識別和存取權管理
+      text: 深入瞭解身分識別和存取管理
     - url: /compliance/assurance/assurance-governance
       itemType: concept
-      text: 控管概觀
+      text: 管理概觀
   - title: 人力資源
     links:
     - url: https://docs.microsoft.com/learn/modules/audit-governance/personnel-security-governance
       itemType: learn
-      text: 了解人力資源
+      text: 深入瞭解人力資源
     - url: /compliance/assurance/assurance-human-resources
       itemType: concept
-      text: 人力資源概觀
-  - title: 身分識別和存取權管理
+      text: 人力資源概覽
+  - title: 身分識別和存取管理
     links:
     - url: https://docs.microsoft.com/learn/modules/audit-identity-access-management/
       itemType: learn
-      text: 了解身分識別和存取權管理
+      text: 深入瞭解身分識別和存取管理
     - url: /compliance/assurance/assurance-identity-and-access-management
       itemType: concept
-      text: 身分識別和存取權管理概觀
+      text: 身分識別和存取管理概述
   - title: 事件管理
     links:
     - url: https://docs.microsoft.com/learn/modules/audit-incident-management/
       itemType: learn
-      text: 了解事件管理
+      text: 深入瞭解事件管理
     - url: /compliance/assurance/assurance-incident-management
       itemType: concept
-      text: 事件管理概觀
+      text: 事件管理概述
   - title: 網路安全性
     links:
     - url: /compliance/assurance/assurance-network-security
       itemType: concept
-      text: 網域安全性概觀
+      text: 網路安全性概述
   - title: 隱私權
     links:
     - url: https://docs.microsoft.com/learn/modules/audit-privacy/
       itemType: learn
-      text: 了解隱私權
+      text: 深入瞭解隱私權
     - url: /compliance/assurance/assurance-privacy
       itemType: concept
-      text: 隱私權概觀
-  - title: 復原和連續性
+      text: 隱私權概述
+  - title: 恢復能力和持續性
     links:
     - url: https://docs.microsoft.com/learn/modules/audit-resiliency-continuity/
       itemType: learn
-      text: 了解復原和連續性
+      text: 深入瞭解恢復能力與連續性
     - url: /compliance/assurance/assurance-resiliency-and-continuity
       itemType: concept
-      text: 復原和連續性概觀
+      text: 恢復能力和持續性概述
   - title: 風險管理
     links:
     - url: https://docs.microsoft.com/learn/modules/audit-risk-management/
       itemType: learn
-      text: 了解風險管理
+      text: 深入瞭解風險管理
     - url: /compliance/assurance/assurance-risk-management
       itemType: concept
-      text: 風險管理概觀
-  - title: 安全性開發與作業
+      text: 風險管理綜述
+  - title: 安全性開發與運作
     links:
     - url: https://docs.microsoft.com/learn/modules/audit-security-development-operation/
       itemType: learn
-      text: 了解安全性開發作業
+      text: 深入瞭解安全性開發作業
     - url: /compliance/assurance/assurance-security-development-and-operation
       itemType: concept
-      text: 安全性開發作業概觀
-  - title: 安全性監視功能
+      text: 安全性開發作業概述
+  - title: 安全性監控
     links:
     - url: https://docs.microsoft.com/learn/modules/audit-vulnerability-management/security-monitoring
       itemType: learn
-      text: 了解安全性監視
+      text: 深入瞭解安全性監控
     - url: /compliance/assurance/assurance-security-monitoring
       itemType: concept
-      text: 安全性監視概觀
+      text: 安全性監控概述
   - title: 供應商管理
     links:
     - url: https://docs.microsoft.com/learn/modules/audit-subprocessor-management/
       itemType: learn
-      text: 了解供應商管理
+      text: 深入瞭解供應商管理
     - url: /compliance/assurance/assurance-supplier-management
       itemType: concept
-      text: 供應商管理概觀
+      text: 供應商管理綜述
   - title: 弱點管理
     links:
     - url: https://docs.microsoft.com/learn/modules/audit-vulnerability-management/
       itemType: learn
-      text: 了解弱點管理
+      text: 深入瞭解薄弱環節管理
     - url: /compliance/assurance/assurance-vulnerability-management
       itemType: concept
-      text: 弱點管理概觀
+      text: 弱點管理概述
 additionalContent:
   sections:
-  - title: 開始使用 Microsoft 365 中的合規性
-    summary: 如果您不熟悉 Microsoft 365 合規性，並想知道該從何處著手，本節提供主要解決方案的連結，並會排定重要合規性領域的優先順序。
+  - title: Microsoft 365 中的合規性入門
+    summary: 如果您是 Microsoft 365 合規性的新資訊，並想知道從何處開始，本節會提供主要解決方案的連結，並排定重要合規性區域的優先順序。
     items:
     - title: 了解合規性管理員
-      summary: 了解什麼是合規性管理員、它如何協助簡化合規性、降低風險以及其關鍵元件。
+      summary: 瞭解合規性管理員是什麼，它如何協助簡化法規遵從性及降低風險，以及其重要元件。
       url: https://docs.microsoft.com/microsoft-365/compliance/compliance-manager
-    - title: 管理內部風險
-      summary: 透過偵測、調查和處理組織中的惡意和意外活動，將內部風險降至最低。
+    - title: 管理測試人員風險
+      summary: 偵測、調查和採取組織中惡意和無意活動的動作，以盡可能降低內部風險。
       url: https://docs.microsoft.com/microsoft-365/compliance/insider-risk-management
     - title: 管理資訊保護
-      summary: 使用 Microsoft 資訊保護 (MIP) 可協助您探索、分類及保護敏感性資訊，無論這些資料儲存在某處在或傳輸中。
+      summary: 使用 Microsoft 資訊保護 (MIP) ，協助您探索、分類及保護任何地方生活或傳播的機密資訊。
       url: https://docs.microsoft.com/microsoft-365/compliance/protect-information
     - title: 管理資訊控管
-      summary: 使用 Microsoft 資訊控管 (MIG) 來控管您的資料，以符合合規性或法規需求。
+      summary: 使用 Microsoft 資訊控管 (MIG) 功能，針對法規遵從性或法規需求來管理您的資料。
       url: https://docs.microsoft.com/microsoft-365/compliance/manage-information-governance
     - title: 管理電子文件探索
-      summary: 在法律案例中使用電子文件探索來識別及分析內容，做為證據。
+      summary: 使用 eDiscovery，以法律案例中的證據識別及分析內容。
       url: https://docs.microsoft.com/microsoft-365/compliance/ediscovery
     - title: 為資料隱私權規定部署資訊保護
-      summary: 識別、尋找、保護、控管及回應資料隱私權事件，以取得儲存在受資料隱私權法規制約的 Microsoft 365 服務中的個人資料。
+      summary: 針對儲存于資料隱私權法規的 Microsoft 365 服務中儲存的個人資料，識別、尋找、保護、管理和回應資料隱私權事件。
       url: https://docs.microsoft.com/microsoft-365/solutions/information-protection-deploy
