--- a/compliance/regulatory/offering-home.yml
+++ b/compliance/regulatory/offering-home.yml
@@ -3,7 +3,7 @@ title: Microsoft 合規性方案
 summary: 深入瞭解 Microsoft 產品和服務如何協助您的組織符合法規遵從性標準。
 brand: m365
 metadata:
-  title: Microsoft 365、Azure 雲端服務和其他 Microsoft 服務的規範服務。
+  title: Microsoft 365、Azure 及其他 Microsoft 服務的規範服務。
   description: 深入瞭解 Microsoft 產品和服務如何協助您的組織符合法規遵從性標準。
   services: service
   ms.service: O365-seccomp
@@ -16,14 +16,14 @@ metadata:
   ms.author: robmazz
   ms.date: 11/30/2020
   localization_priority: Normal
-  ms.openlocfilehash: 95c5b020d516d5fc7ccce6978c6f4cf0ad590b5f
-  ms.sourcegitcommit: 98b2d08699e942b4d4f3d7960df6e8e85030f5ec
+  ms.openlocfilehash: 46592794abb76821595c95cea2d66cd529d727c5
+  ms.sourcegitcommit: 7651cdc4af88278aef02114b4331d8d379f10def
   ms.translationtype: MT
   ms.contentlocale: zh-TW
-  ms.lasthandoff: 12/01/2020
-  ms.locfileid: "49527120"
+  ms.lasthandoff: 12/03/2020
+  ms.locfileid: "49568649"
 conceptualContent:
-  title: Microsoft 365、Azure 雲端服務和其他 Microsoft 服務的規範服務
+  title: Microsoft 365、Azure 及其他 Microsoft 服務的規範服務
   summary: Microsoft 提供法規遵從性服務，協助您的組織遵守管理資料集合及使用的本國、地區和行業特定需求。
   items:
   - title: 全域
@@ -260,8 +260,8 @@ conceptualContent:
       text: TRUCS (中國)
 additionalContent:
   sections:
-  - title: 專用於 Azure 雲端服務的規範服務
-    summary: 適用于 Azure 雲端服務的規範服務，可協助您的組織遵守管理資料集合及使用的本國、地區和行業特定需求。
+  - title: 專用於 Azure 的規範服務
+    summary: 適用于 Azure 的規範服務，可協助您的組織遵守管理資料集合及使用的本國、地區和行業特定需求。
     items:
     - title: 全域
       links:
