commit translated contents

--- a/compliance/regulatory/offering-home.yml
+++ b/compliance/regulatory/offering-home.yml
@@ -16,12 +16,12 @@ metadata:
   ms.author: robmazz
   ms.date: 11/30/2020
   localization_priority: Normal
-  ms.openlocfilehash: c2b86ee57029c300a6179861b9aace64e3cf491f
-  ms.sourcegitcommit: ebf63302d9ffa6a93255c88f660ef27b0bc696d6
+  ms.openlocfilehash: 82d7c9b4c39d4916a81d08abb34c3d8bc6d65b31
+  ms.sourcegitcommit: db4bd64256f52087d450c2f7fd4632718aa2c33d
   ms.translationtype: MT
   ms.contentlocale: zh-TW
-  ms.lasthandoff: 12/05/2020
-  ms.locfileid: "49581168"
+  ms.lasthandoff: 12/08/2020
+  ms.locfileid: "49588697"
 conceptualContent:
   title: Microsoft 365、Azure 及其他 Microsoft 服務的規範服務
   summary: Microsoft 提供法規遵從性服務，協助您的組織遵守管理資料集合及使用的本國、地區和行業特定需求。
@@ -37,11 +37,14 @@ conceptualContent:
     - url: offering-ISO-22301.md
       itemType: reference
       text: ISO 22301
+    - url: offering-ISO-27001.md
+      itemType: reference
+      text: ISO 27001
+  - title: 全域
+    links:
     - url: offering-ISO-27017.md
       itemType: reference
       text: ISO 27017
-  - title: 全域
-    links:
     - url: offering-ISO-27018.md
       itemType: reference
       text: ISO 27018
