--- a/compliance/regulatory/TOC.yml
+++ b/compliance/regulatory/TOC.yml
@@ -10,7 +10,7 @@
           href: offering-csa-star-attestation.md
         - name: CSA-STAR 認證
           href: offering-csa-star-certification.md
-        - name: CSA-STAR 自我評定
+        - name: CSA STAR 自我評估
           href: offering-csa-star-self-assessment.md
         - name: ISO - 建議的行動計劃
           href: iso-action-plan.md
@@ -250,8 +250,8 @@
           items:
             - name: APRA (澳洲)
               href: offering-APRA-Australia.md
-            - name: IRAP/CCSL (澳洲)
-              href: offering-CCSL-IRAP-Australia.md
+            - name: IRAP (澳洲)
+              href: offering-IRAP-Australia.md
             - name: NZ CC Framework (紐西蘭)
               href: offering-nz-cc-framework-nz.md
         - name: 歐洲
@@ -270,7 +270,7 @@
               href: offering-enisa.md
             - name: 歐盟示範條款
               href: offering-eu-model-clauses.md
-            - name: 歐盟美國隱私盾
+            - name: 歐盟–美國隱私保護盾
               href: offering-eu-us-privacy-shield.md
             - name: G-Cloud (英國)
               href: offering-g-cloud-uk.md
@@ -336,7 +336,7 @@
           href: gdpr-dsr-visual-studio-family.md
         - name: Windows 企業版
           href: gdpr-dsr-windows.md
-    - name: 缺口通知
+    - name: 外洩通知
       items:
         - name: 外洩通知
           href: gdpr-breach-notification.md
@@ -350,7 +350,7 @@
           href: gdpr-breach-windows.md
     - name: 資料保護影響聲明
       items:
-        - name: 資料保護影響評定
+        - name: 資料保護影響評估
           href: gdpr-data-protection-impact-assessments.md
         - name: Azure
           href: gdpr-dpia-azure.md
