--- a/compliance/assurance/TOC.yml
+++ b/compliance/assurance/TOC.yml
@@ -80,10 +80,10 @@
       href: assurance-security-incident-management.md
     - name: 安全性事件管理準備
       href: assurance-sim-preparation.md
-    - name: 安全性事件管理內含項目、根除、復原
-      href: assurance-sim-containment-eradication-recovery.md
     - name: 安全性事件管理偵測和分析
       href: assurance-sim-detection-analysis.md
+    - name: 安全性事件管理遏制、根除和復原
+      href: assurance-sim-containment-eradication-recovery.md
     - name: 安全性事件管理事件後續活動
       href: assurance-sim-post-incident-activity.md
 - name: 網路安全性
@@ -132,6 +132,8 @@
       href: assurance-monitoring-and-self-healing.md
     - name: Exchange Online 資料復原
       href: assurance-exchange-data-resiliency.md
+    - name: SharePoint 和 OneDrive 資料復原
+      href: assurance-sharepoint-onedrive-data-resiliency.md
     - name: 企業業務連續性管理 (EBCM) 與雲端服務
       href: assurance-understanding-ebcm-with-cloud-services.md
     - name: 客戶與雲端合作夥伴的 EBCM 責任
