--- a/compliance/index.yml
+++ b/compliance/index.yml
@@ -15,61 +15,61 @@ metadata:
   author: robmazz
   ms.author: robmazz
   ms.date: 11/30/2020
-  ms.openlocfilehash: 4a45e8244a3adba18d25f24301b921c385850a9c
-  ms.sourcegitcommit: 9ce2e6599e6cb15533cb07e8291dc3a2b8795679
+  ms.openlocfilehash: 67c37d1bc68017f0ecf66d1d446ab885400d2293
+  ms.sourcegitcommit: 2b347c9b778ac9b6450daf20fdf8eb74ed14cbbd
   ms.translationtype: MT
   ms.contentlocale: zh-TW
-  ms.lasthandoff: 01/11/2021
-  ms.locfileid: "49795513"
+  ms.lasthandoff: 03/23/2021
+  ms.locfileid: "51002183"
 highlightedContent:
   items:
   - title: 開始使用 Microsoft 365 合規性的快速工作
     itemType: get-started
-    url: https://docs.microsoft.com/microsoft-365/compliance/compliance-quick-tasks
+    url: /microsoft-365/compliance/compliance-quick-tasks
   - title: 為資料隱私權規定部署資訊保護
     itemType: get-started
-    url: https://docs.microsoft.com/microsoft-365/solutions/information-protection-deploy
+    url: /microsoft-365/solutions/information-protection-deploy
   - title: 深入瞭解雲端中的共用責任
     itemType: overview
-    url: https://docs.microsoft.com/azure/security/fundamentals/shared-responsibility
+    url: /azure/security/fundamentals/shared-responsibility
   - title: 深入瞭解 Microsoft 如何保護客戶資料
     itemType: learn
-    url: https://docs.microsoft.com/learn/paths/audit-safeguard-customer-data/
+    url: /learn/paths/audit-safeguard-customer-data/
   - title: 深入瞭解 Microsoft 合規性管理員
     itemType: learn
-    url: https://docs.microsoft.com/learn/paths/compmgmt/
-  - title: 在 Microsoft 365 中管理有問必答風險
+    url: /learn/paths/compmgmt/
+  - title: 管理 Microsoft 365 中的內部風險
     itemType: learn
-    url: https://docs.microsoft.com/learn/paths/m365-compliance-insider/
+    url: /learn/paths/m365-compliance-insider/
   - title: 管理資訊保護和管理
     itemType: learn
-    url: https://docs.microsoft.com/learn/paths/m365-compliance-information/
+    url: /learn/paths/m365-compliance-information/
   - title: 深入瞭解「高級 eDiscovery」和「高級核查」
     itemType: learn
-    url: https://docs.microsoft.com/learn/paths/compliance-discover/
+    url: /learn/paths/compliance-discover/
 productDirectory:
   title: 法規遵從性
   summary: 符合國際和國內標準及規章的 Microsoft 指導方針。
   items:
   - title: 一般資料保護規定 (GDPR)
-    imageSrc: https://docs.microsoft.com/office/media/icons/compliance-blue.svg
+    imageSrc: /office/media/icons/compliance-blue.svg
     summary: 指導方針，協助您在使用 Microsoft 產品和服務時，遵循 GDPR 的權利並履行義務。
     url: /compliance/regulatory/gdpr
   - title: Microsoft 合規性方案
-    imageSrc: https://docs.microsoft.com/office/media/icons/globe-internet.svg
+    imageSrc: /office/media/icons/globe-internet.svg
     summary: Microsoft 提供一組完整的規範選項，可協助您的組織遵守管理資料集合及使用的本國、區域及特定行業的需求。
     url: /compliance/regulatory/offering-home
   - title: 法規遵從性和 Microsoft Azure
-    imageSrc: https://docs.microsoft.com/media/logos/logo_azure.svg
+    imageSrc: /media/logos/logo_azure.svg
     summary: 深入瞭解法規遵從性和 Microsoft Azure。
-    url: https://docs.microsoft.com/azure/compliance/
+    url: /azure/compliance/
 conceptualContent:
   title: 服務保證
   summary: 請先瞭解 Microsoft 如何保護客戶資料，以進行安全性和風險評估。
   items:
   - title: 架構
     links:
-    - url: https://docs.microsoft.com/learn/modules/audit-architecture/
+    - url: /learn/modules/audit-architecture/
       itemType: learn
       text: 深入瞭解架構
     - url: /compliance/assurance/assurance-architecture
@@ -77,7 +77,7 @@ conceptualContent:
       text: 架構概觀
   - title: 稽核記錄
     links:
-    - url: https://docs.microsoft.com/learn/modules/audit-logging-monitoring/
+    - url: /learn/modules/audit-logging-monitoring/
       itemType: learn
       text: 深入瞭解審核記錄
     - url: /compliance/assurance/assurance-audit-logging
@@ -85,7 +85,7 @@ conceptualContent:
       text: 稽核記錄概觀
   - title: 資料中心安全性
     links:
-    - url: https://docs.microsoft.com/learn/modules/audit-physical-security/
+    - url: /learn/modules/audit-physical-security/
       itemType: learn
       text: 深入瞭解資料中心安全性
     - url: /compliance/assurance/assurance-datacenter-security
@@ -93,7 +93,7 @@ conceptualContent:
       text: 資料中心安全性概觀
   - title: 加密和金鑰管理
     links:
-    - url: https://docs.microsoft.com/learn/modules/audit-encryption/
+    - url: /learn/modules/audit-encryption/
       itemType: learn
       text: 深入瞭解加密和金鑰管理
     - url: /compliance/assurance/assurance-encryption
@@ -101,7 +101,7 @@ conceptualContent:
       text: 加密和金鑰管理概觀
   - title: 治理
     links:
-    - url: https://docs.microsoft.com/learn/modules/audit-governance/
+    - url: /learn/modules/audit-governance/
       itemType: learn
       text: 深入瞭解管理
     - url: /compliance/assurance/assurance-governance
@@ -109,7 +109,7 @@ conceptualContent:
       text: 控管概觀
   - title: 人力資源
     links:
-    - url: https://docs.microsoft.com/learn/modules/audit-governance/personnel-security-governance
+    - url: /learn/modules/audit-governance/personnel-security-governance
       itemType: learn
       text: 深入瞭解人力資源
     - url: /compliance/assurance/assurance-human-resources
@@ -117,7 +117,7 @@ conceptualContent:
       text: 人力資源概觀
   - title: 身分識別與存取管理
     links:
-    - url: https://docs.microsoft.com/learn/modules/audit-identity-access-management/
+    - url: /learn/modules/audit-identity-access-management/
       itemType: learn
       text: 深入瞭解身分識別和存取管理
     - url: /compliance/assurance/assurance-identity-and-access-management
@@ -125,7 +125,7 @@ conceptualContent:
       text: 身分識別和存取管理概觀
   - title: 事件管理
     links:
-    - url: https://docs.microsoft.com/learn/modules/audit-incident-management/
+    - url: /learn/modules/audit-incident-management/
       itemType: learn
       text: 深入瞭解事件管理
     - url: /compliance/assurance/assurance-incident-management
@@ -138,7 +138,7 @@ conceptualContent:
       text: 網路安全性概觀
   - title: 隱私權
     links:
-    - url: https://docs.microsoft.com/learn/modules/audit-privacy/
+    - url: /learn/modules/audit-privacy/
       itemType: learn
       text: 深入瞭解隱私權
     - url: /compliance/assurance/assurance-privacy
@@ -146,7 +146,7 @@ conceptualContent:
       text: 隱私權概觀
   - title: 復原和連續性
     links:
-    - url: https://docs.microsoft.com/learn/modules/audit-resiliency-continuity/
+    - url: /learn/modules/audit-resiliency-continuity/
       itemType: learn
       text: 深入瞭解恢復能力與連續性
     - url: /compliance/assurance/assurance-resiliency-and-continuity
@@ -154,7 +154,7 @@ conceptualContent:
       text: 復原和連續性概觀
   - title: 風險管理
     links:
-    - url: https://docs.microsoft.com/learn/modules/audit-risk-management/
+    - url: /learn/modules/audit-risk-management/
       itemType: learn
       text: 深入瞭解風險管理
     - url: /compliance/assurance/assurance-risk-management
@@ -162,7 +162,7 @@ conceptualContent:
       text: 風險管理概觀
   - title: 安全性開發與作業
     links:
-    - url: https://docs.microsoft.com/learn/modules/audit-security-development-operation/
+    - url: /learn/modules/audit-security-development-operation/
       itemType: learn
       text: 深入瞭解安全性開發作業
     - url: /compliance/assurance/assurance-security-development-and-operation
@@ -170,7 +170,7 @@ conceptualContent:
       text: 安全性開發作業概述
   - title: 安全性監視
     links:
-    - url: https://docs.microsoft.com/learn/modules/audit-vulnerability-management/security-monitoring
+    - url: /learn/modules/audit-vulnerability-management/security-monitoring
       itemType: learn
       text: 深入瞭解安全性監控
     - url: /compliance/assurance/assurance-security-monitoring
@@ -178,7 +178,7 @@ conceptualContent:
       text: 安全性監視概觀
   - title: 供應商管理
     links:
-    - url: https://docs.microsoft.com/learn/modules/audit-subprocessor-management/
+    - url: /learn/modules/audit-subprocessor-management/
       itemType: learn
       text: 深入瞭解供應商管理
     - url: /compliance/assurance/assurance-supplier-management
@@ -186,7 +186,7 @@ conceptualContent:
       text: 供應商管理概觀
   - title: 弱點管理
     links:
-    - url: https://docs.microsoft.com/learn/modules/audit-vulnerability-management/
+    - url: /learn/modules/audit-vulnerability-management/
       itemType: learn
       text: 深入瞭解薄弱環節管理
     - url: /compliance/assurance/assurance-vulnerability-management
@@ -199,19 +199,19 @@ additionalContent:
     items:
     - title: 了解合規性管理員
       summary: 瞭解合規性管理員是什麼，它如何協助簡化法規遵從性及降低風險，以及其重要元件。
-      url: https://docs.microsoft.com/microsoft-365/compliance/compliance-manager
+      url: /microsoft-365/compliance/compliance-manager
     - title: 管理測試人員風險
       summary: 偵測、調查和採取組織中惡意和無意活動的動作，以盡可能降低內部風險。
-      url: https://docs.microsoft.com/microsoft-365/compliance/insider-risk-solution-overview
+      url: /microsoft-365/compliance/insider-risk-solution-overview
     - title: 管理資訊保護
       summary: 使用 Microsoft 資訊保護 (MIP) ，協助您探索、分類及保護任何地方生活或傳播的機密資訊。
-      url: https://docs.microsoft.com/microsoft-365/compliance/protect-information
+      url: /microsoft-365/compliance/protect-information
     - title: 管理資訊控管
       summary: 使用 Microsoft 資訊控管 (MIG) 功能，針對法規遵從性或法規需求來管理您的資料。
-      url: https://docs.microsoft.com/microsoft-365/compliance/manage-information-governance
+      url: /microsoft-365/compliance/manage-information-governance
     - title: 管理電子文件探索
       summary: 使用 eDiscovery，以法律案例中的證據識別及分析內容。
-      url: https://docs.microsoft.com/microsoft-365/compliance/ediscovery
+      url: /microsoft-365/compliance/ediscovery
     - title: 為資料隱私權規定部署資訊保護
       summary: 針對儲存于資料隱私權法規的 Microsoft 365 服務中儲存的個人資料，識別、尋找、保護、管理和回應資料隱私權事件。
-      url: https://docs.microsoft.com/microsoft-365/solutions/information-protection-deploy
+      url: /microsoft-365/solutions/information-protection-deploy
