--- a/compliance/assurance/TOC.yml
+++ b/compliance/assurance/TOC.yml
@@ -3,11 +3,11 @@
     - name: 架構概觀
       href: assurance-architecture.md
     - name: Microsoft 365 中的隔離控制項
-      href: 'https://docs.microsoft.com/microsoft-365/enterprise/microsoft-365-isolation-controls?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json'
+      href: /microsoft-365/enterprise/microsoft-365-isolation-controls?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
     - name: Microsoft 365 中的租用戶隔離
-      href: 'https://docs.microsoft.com/microsoft-365/enterprise/microsoft-365-tenant-isolation-overview?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json'
+      href: /microsoft-365/enterprise/microsoft-365-tenant-isolation-overview?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
     - name: AAD 中的隔離和存取控制項
-      href: 'https://docs.microsoft.com/microsoft-365/enterprise/microsoft-365-isolation-in-azure-active-directory?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json'
+      href: /microsoft-365/enterprise/microsoft-365-isolation-in-azure-active-directory?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
 - name: 稽核記錄
   items:
     - name: 稽核記錄概觀
@@ -24,34 +24,36 @@
   items:
     - name: 資料中心安全性概觀
       href: assurance-datacenter-security.md
+    - name: 資料中心威脅、弱點和風險評估
+      href: assurance-threat-vulnerability-risk-assessment.md
 - name: 加密和金鑰管理
   items:
     - name: 加密和金鑰管理概觀
       href: assurance-encryption.md
     - name: Microsoft Cloud 中的加密
-      href: 'https://docs.microsoft.com/microsoft-365/compliance/office-365-encryption-in-the-microsoft-cloud-overview?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json'
+      href: /microsoft-365/compliance/office-365-encryption-in-the-microsoft-cloud-overview?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
     - name: 傳輸中資料的加密
       href: assurance-encryption-in-transit.md
     - name: 為 Microsoft 365 服務加密
       href: assurance-encryption-for-microsoft-365-services.md
     - name: 為靜態資料服務加密
-      href: 'https://docs.microsoft.com/microsoft-365/compliance/office-365-service-encryption?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json'
+      href: /microsoft-365/compliance/office-365-service-encryption?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
     - name: Microsoft 365 中的電子郵件加密
-      href: 'https://docs.microsoft.com/microsoft-365/compliance/email-encryption?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json'
+      href: /microsoft-365/compliance/email-encryption?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
     - name: Exchange Online 如何保護您的電子郵件機密資料
-      href: 'https://docs.microsoft.com/microsoft-365/compliance/exchange-online-secures-email-secrets?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json'
+      href: /microsoft-365/compliance/exchange-online-secures-email-secrets?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
     - name: Exchange Online 如何使用 TLS 保護電子郵件連線
-      href: 'https://docs.microsoft.com/microsoft-365/compliance/exchange-online-uses-tls-to-secure-email-connections?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json'
+      href: /microsoft-365/compliance/exchange-online-uses-tls-to-secure-email-connections?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
     - name: 適用於加密的 BitLocker 與 Distributed Key Manager (DKM)
-      href: 'https://docs.microsoft.com/microsoft-365/compliance/office-365-bitlocker-and-distributed-key-manager-for-encryption?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json'
+      href: /microsoft-365/compliance/office-365-bitlocker-and-distributed-key-manager-for-encryption?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
     - name: 關於加密的技術參考詳細資料
-      href: 'https://docs.microsoft.com/microsoft-365/compliance/technical-reference-details-about-encryption?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json'
+      href: /microsoft-365/compliance/technical-reference-details-about-encryption?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
 - name: 控管
   items:
     - name: 控管概觀
       href: assurance-governance.md
     - name: 安全性與合規性中心的服務保證
-      href: 'https://docs.microsoft.com/microsoft-365/compliance/service-assurance?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json'
+      href: /microsoft-365/compliance/service-assurance?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
 - name: 人力資源
   items:
     - name: 人力資源概觀
@@ -69,7 +71,7 @@
     - name: 技術控制項
       href: assurance-technology-controls.md
     - name: 客戶加密箱
-      href: 'https://docs.microsoft.com/microsoft-365/compliance/customer-lockbox-requests?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json'
+      href: /microsoft-365/compliance/customer-lockbox-requests?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
     - name: Yammer 企業存取控制項
       href: assurance-yammer-enterprise-access-controls.md
 - name: 事件管理
@@ -97,13 +99,13 @@
     - name: 核心阻絕服務攻擊原則
       href: assurance-core-principles-of-defense-against-dos-attacks.md
     - name: Microsoft 365 服務中的病毒偵測
-      href: 'https://docs.microsoft.com/microsoft-365/security/office-365-security/virus-detection-in-spo?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json'
+      href: /microsoft-365/security/office-365-security/virus-detection-in-spo?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
 - name: 隱私權
   items:
     - name: 隱私權概觀
       href: assurance-privacy.md
     - name: Microsoft 365 客戶資料的儲存位置
-      href: 'https://docs.microsoft.com/microsoft-365/enterprise/o365-data-locations?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json'
+      href: /microsoft-365/enterprise/o365-data-locations?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
     - name: 資料保留、刪除及毀損
       href: assurance-data-retention-deletion-and-destruction-overview.md
     - name: Microsoft 365 資料毀損
@@ -121,7 +123,7 @@
     - name: 雲端服務復原
       href: assurance-m365-service-resiliency.md
     - name: 服務健康狀況和持續性
-      href: 'https://docs.microsoft.com/office365/servicedescriptions/office-365-platform-service-description/service-health-and-continuity?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json'
+      href: /office365/servicedescriptions/office-365-platform-service-description/service-health-and-continuity?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
     - name: 服務資源限制
       href: assurance-resource-limits.md
     - name: 資料復原
@@ -171,4 +173,4 @@
 - name: Azure 安全性基本概念
   items:
     - name: Azure 安全性基本概念
-      href: 'https://docs.microsoft.com/azure/security/fundamentals?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json'
+      href: /azure/security/fundamentals?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
